--- a/Lab1-Console/PowerConsumptionCalc/PowerGridWebSite/_SiteLayout.cshtml
+++ b/Lab1-Console/PowerConsumptionCalc/PowerGridWebSite/_SiteLayout.cshtml
@@ -17,7 +17,7 @@
                 <div class="float-left">
                     <p class="site-title"><a href="~/"></a></p>
                 </div>
-                <div class="float-right">
+                <div class="float-left">
                     <section id="login">
                         @if (WebSecurity.IsAuthenticated) {
                             <text>
@@ -54,7 +54,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET Web Page</p>
+                    <p>&copy; @DateTime.Now.Year - Сторінка даних підстанції</p>
                 </div>
             </div>
         </footer>
